default config changes

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -4,14 +4,14 @@
 
 # Bot information
 BOT_TOKEN=
-BOT_CLIENT_ID=
+BOT_CLIENT_ID=1460499761160519741
 BOT_CLIENT_SECRET=
 
 # Default command prefix
-DEFAULT_PREFIX==
+DEFAULT_PREFIX=fax!
 
 # Default server to send messages to
-DEFAULT_SERVER=
+DEFAULT_SERVER=1171313789250043934
 
 ##################### Users ######################
 
@@ -23,6 +23,7 @@ ADMIN_USERS=
 
 # Web server
 BASE_URI=http://localhost:8000
+API_SECRET=
 
 ################# Miscellaneous ##################
 
