--- a/docker/.env.example
+++ b/docker/.env.example
@@ -23,6 +23,8 @@ ADMIN_USERS=
 
 # Web server
 BASE_URI=http://localhost:8000
+
+# Web API server
 API_SECRET=
 
 ################# Miscellaneous ##################
@@ -30,3 +32,9 @@ API_SECRET=
 # Groq
 GROQ_KEY=
 GROQ_MODEL=llama-3.1-8b-instant
+
+# Lists
+TOPGG_TOKEN=
+DBOTS_TOKEN=
+DBL_TOKEN=
+BOD_TOKEN=
