--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Question
-    url:  https://discord.gg/wjWJwJB
+    url:  https://discord.gg/Edmk3Fxncx
     about: Ask a question about anything
